--- a/templates/media/setup.html
+++ b/templates/media/setup.html
@@ -1,6 +1,6 @@
         <section>
             <section>
-                <h1>setup <span class="returns">Returns : <span>MediaModule | MediaFallbackModule</span></span></h1>
+                <h1>setup <span class="returns">Returns : <span>MediaModule</span></span></h1>
                 <hr />
                 <p>
                     This method setups HTMLMediaElement, media formats and event listeners.
@@ -31,14 +31,6 @@
 <textarea class="codemirror">
 console.log(&quot;X(&apos;media&apos;).setup&quot;);
 
-var mediaPlayer = null;
-
-if (X.IS_XSOUND) {
-    mediaPlayer = X(&apos;media&apos;);  // Use Web Audio API (MediaElementAudioSourceNode)
-} else {
-    mediaPlayer = X(&apos;media&apos;);  // Not use Web Audio API (Fallback by HTMLMediaElement)
-}
-
 var listeners = {
     // The 1st argument is event object
     loadstart      : function(event) {},
@@ -60,7 +52,6 @@ try {
         listeners : listeners
     });
 } catch (error) {
-    // Cannot use HTMLMediaElement (for example, less than IE9)
     window.alert(error.message);
 }
 </textarea>
