--- a/templates/media/param.html
+++ b/templates/media/param.html
@@ -1,6 +1,6 @@
         <section>
             <section>
-                <h1>param <span class="returns">Returns : <span>number | boolean | MediaModule | MediaFallbackModule</span></span></h1>
+                <h1>param <span class="returns">Returns : <span>number | boolean | MediaModule</span></span></h1>
                 <hr />
                 <p>
                     This method gets or sets parameters.
@@ -37,14 +37,6 @@
             <section>
 <textarea class="codemirror">
 console.log(&quot;X(&apos;param&apos;).stop&quot;);
-
-var mediaPlayer = null;
-
-if (X.IS_XSOUND) {
-    mediaPlayer = X(&apos;media&apos;);  // Use Web Audio API (MediaElementAudioSourceNode)
-} else {
-    mediaPlayer = X(&apos;media&apos;);  // Not use Web Audio API (Fallback by HTMLMediaElement)
-}
 
 var listeners = {
     canplaythrough : function(event) {
@@ -114,7 +106,6 @@ try {
         listeners : listeners
     }).ready(&apos;resources/audio/forever-love-piano-instruments&apos;);
 } catch (error) {
-    // Cannot use HTMLMediaElement (for example, less than IE9)
     window.alert(error.message);
 }
 </textarea>
