--- a/templates/media/ready.html
+++ b/templates/media/ready.html
@@ -1,6 +1,6 @@
         <section>
             <section>
-                <h1>ready <span class="returns">Returns : <span>MediaModule | MediaFallbackModule</span></span></h1>
+                <h1>ready <span class="returns">Returns : <span>MediaModule</span></span></h1>
                 <hr />
                 <p>
                     This method reads media.
@@ -24,14 +24,6 @@
 <textarea class="codemirror">
 console.log(&quot;X(&apos;media&apos;).ready&quot;);
 
-var mediaPlayer = null;
-
-if (X.IS_XSOUND) {
-    mediaPlayer = X(&apos;media&apos;);  // Use Web Audio API (MediaElementAudioSourceNode)
-} else {
-    mediaPlayer = X(&apos;media&apos;);  // Not use Web Audio API (Fallback by HTMLMediaElement)
-}
-
 try {
     X(&apos;media&apos;).setup({
         media   : document.querySelector(&apos;audio&apos;),
@@ -40,7 +32,6 @@ try {
 
     X(&apos;media&apos;).ready(&apos;resources/audio/forever-love-piano-instruments&apos;);
 } catch (error) {
-    // Cannot use HTMLMediaElement (for example, less than IE9)
     window.alert(error.message);
 }
 </textarea>
