--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,14 @@
                     <li>Session (by WebSocket)</li>
                 </ul>
                 <!--
+                <p>
+                    This don't depend on other libraries or frameworks (like jQuery, React).
+                </p>
+                -->
+                <p>
+                    <img src="https://user-images.githubusercontent.com/4006693/33797345-b6317092-dd49-11e7-9a16-6a96f9bd8bb3.jpg" alt="Browser Support" />
+                </p>
+                <!--
                 <p>The structure of description is the following.</p>
 <pre>
 <code>
@@ -75,8 +83,7 @@ X('oscillator').setup(true).ready().start(440);
                 <h1>Demo</h1>
                 <hr />
                 <p>
-                    The application that uses this library is in the following URL.<br />
-                    Please use one of Chrome, Opera, Firefox, Safari, Edge.
+                    The application that uses this library is in the following URL.
                 </p>
                 <ul class="list-marker">
                     <li><a href="https://korilakkuma.github.io/X-Sound/" target="_blank">X Sound</a></li>
@@ -92,6 +99,7 @@ X('oscillator').setup(true).ready().start(440);
                 <h1>Installation</h1>
                 <hr />
 <pre><code>$ npm install --save xsound</code></pre>
+            </section>
             <section>
                 <h1>Usage</h1>
                 <hr />
